--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Additional taglibs available in Freemarker templates for Liferay 7.1, 7.2 and 7.3</li>
             <li>Feature: Updated taglib support (CSS, Language Bundle) for Liferay 7.3</li>
             <li>Feature: Added some basic code completions for some liferay taglib attributes</li>
+            <li>Feature: Code completion for Java Classes in Freemarker taglibs</li>
             <li>Bugfix: Parsing package.json may lead to an exception in the log</li>
             <li>Bugfix: Fixed compatibility with IntelliJ Community Edition</li>
             <li>Bugfix: Fixed injection of Javascript inside Freemarker taglibs using the square bracket notation</li>
