--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ intellij {
 //    version "IU-2018.3.4"
 //    version "IU-2019.3.4"
     version "IU-2020.2.1"
+//    version "IU-2020.3"
     type 'IU'
     pluginName 'Liferay IntelliJ Plugin'
     plugins = [
