--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
     <id>de.dm.intellij.liferay</id>
     <name>Liferay</name>
     <category>Framework integration</category>
-    <version>0.0.10</version>
+    <version>0.0.11</version>
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
@@ -25,6 +25,7 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.11</p>
         <p>Version 0.0.10</p>
         <ul>
             <li>Feature: Additional taglibs available in Freemarker templates for Liferay 7.1, 7.2 and 7.3</li>
