--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,6 +26,9 @@
 
     <change-notes><![CDATA[
         <p>Version 0.0.11</p>
+        <ul>
+            <li>Feature: Implicit usage of some Language property keys like "javax.portlet.title." (no longer shown as "unused property")</li>
+        </ul>
         <p>Version 0.0.10</p>
         <ul>
             <li>Feature: Additional taglibs available in Freemarker templates for Liferay 7.1, 7.2 and 7.3</li>
