--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,7 +27,7 @@
     <change-notes><![CDATA[
         <p>Version 0.0.11</p>
         <ul>
-            <li>Feature: Implicit usage of some Language property keys like "javax.portlet.title." (no longer shown as "unused property")</li>
+            <li>Feature: Implicit usage of some property files and keys ("javax.portlet.title." or "liferay.workspace."), so that they are no longer shown as "unused property"</li>
         </ul>
         <p>Version 0.0.10</p>
         <ul>
