--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Implicit usage of some property files and keys ("javax.portlet.title." or "liferay.workspace."), so that they are no longer shown as "unused property"</li>
             <li>Bugfix: OSGi property code completion for single properties, e.g. without brackets around</li>
             <li>Bugfix: Improved compatibility with IntelliJ 2021.1</li>
+            <li>Bugfix: fixed implicit freemarker variables for modified facet portlet</li>
             <li>Change: Dropped support for IntelliJ IDEA 2020.3 or earlier</li>
         </ul>
         <p>Version 0.0.10</p>
